@@ -18,7 +18,6 @@
                 <version>3.8.1</version>
                 <configuration>
                     <release>16</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
                     <annotationProcessorPaths>
